name update 2 index.html

--- a/index.html
+++ b/index.html
@@ -23,9 +23,9 @@
   <h2>Steps for Downloading:</h2>
   <ol>
     <li>Click the link to download the zip file</li>
-    <li>Unzip the zip file and the name of the folder should be "datasets"</li>
+    <li>Unzip the zip file and the name of the folder should be "geodeterminants_datasets"</li>
     <li>Delete the zip file</li>
-    <li>Move the "datasets" folder into the folder that you are planning to use the geodeterminants package in </li>
+    <li>Move the "geodeterminants_datasets" folder into the folder that you are planning to use the geodeterminants package in </li>
         <img src="Rutgers_Shield.png" 
         alt="Rutgers shield logo" 
         width="50"
