New data as of 1/16 index.html

--- a/index.html
+++ b/index.html
@@ -14,18 +14,18 @@
       <img src="logo.png" alt="Geodeterminants main logo" class="center-logo" width = "250">
 </div>
     <br>
-    <a href="https://drive.google.com/file/d/1pB3RbsUn5A1WPmulzbGrd3G4YpWwvNtX/view?usp=sharing" download>Click here to download</a>
+    <a href="https://drive.google.com/file/d/1OMHsyaFPNGa8Vu68rrrLKSg1Gqu94Prb/view?usp=sharing" download>Click here to download</a>
   <h3>
     This page is used for the downloading of the zip file that contains datasets for the geodeterminants package, constructed in R. 
-    <strong> DO NOT RENAME ANY FILES AND THE UNZIPPED FOLDER SHOULD REMAIN NAMED "geodeterminants_datasets"</strong>
+    <strong> DO NOT RENAME ANY FILES AND THE UNZIPPED FOLDER SHOULD REMAIN NAMED "datasets"</strong>
   </h3>
   </center>
   <h2>Steps for Downloading:</h2>
   <ol>
     <li>Click the link to download the zip file</li>
-    <li>Unzip the zip file and the name of the folder should be "geodeterminants_datasets"</li>
+    <li>Unzip the zip file and the name of the folder should be "datasets"</li>
     <li>Delete the zip file</li>
-    <li>Move the "geodeterminants_datasets" folder into the folder that you are planning to use the geodeterminants package in </li>
+    <li>Move the "datasets" folder into the folder that you are planning to use the geodeterminants package in </li>
         <img src="Rutgers_Shield.png" 
         alt="Rutgers shield logo" 
         width="50"
